--- a/.github/workflows/middleman.yml
+++ b/.github/workflows/middleman.yml
@@ -14,6 +14,11 @@ jobs:
     container: ruby:2.7
     steps:
       - uses: actions/checkout@v2
+      - name: Setup deploy key
+        run: |
+          mkdir ~/.ssh
+          echo "${{ secrets.PRIVATE_DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
       - run: git clone --depth=1 git@github.com:benchmark-driver/benchmark-driver.github.io ./build
       - run: git clone --depth=1 https://github.com/benchmark-driver/sky2-result ../sky2-result
 
