--- a/.github/workflows/middleman.yml
+++ b/.github/workflows/middleman.yml
@@ -20,6 +20,7 @@ jobs:
           echo "${{ secrets.PRIVATE_DEPLOY_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com
+          cat ~/.ssh/known_hosts
       - run: git clone --depth=1 git@github.com:benchmark-driver/benchmark-driver.github.io ./build
       - run: git clone --depth=1 https://github.com/benchmark-driver/sky2-result ../sky2-result
 
