Try adding a pub key

--- a/.github/workflows/middleman.yml
+++ b/.github/workflows/middleman.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Setup deploy key
         run: |
           mkdir ~/.ssh
+          echo "${{ secrets.PUBLIC_DEPLOY_KEY }}" > ~/.ssh/id_rsa.pub
           echo "${{ secrets.PRIVATE_DEPLOY_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
       - run: git clone --depth=1 git@github.com:benchmark-driver/benchmark-driver.github.io ./build
