--- a/.github/workflows/middleman.yml
+++ b/.github/workflows/middleman.yml
@@ -14,13 +14,10 @@ jobs:
     container: ruby:2.7
     steps:
       - uses: actions/checkout@v2
-      - name: Setup deploy key
-        run: |
-          mkdir ~/.ssh
-          echo "${{ secrets.PUBLIC_DEPLOY_KEY }}" > ~/.ssh/id_rsa.pub
-          echo "${{ secrets.PRIVATE_DEPLOY_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-      - run: eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; git clone --depth=1 git@github.com:benchmark-driver/benchmark-driver.github.io ./build
+      - uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.PRIVATE_DEPLOY_KEY }}
+      - run: git clone --depth=1 git@github.com:benchmark-driver/benchmark-driver.github.io ./build
         env:
           GIT_SSH_COMMAND: "ssh -o StrictHostKeyChecking=no"
       - run: git clone --depth=1 https://github.com/benchmark-driver/sky2-result ../sky2-result
