Fix the build path

--- a/.github/workflows/middleman.yml
+++ b/.github/workflows/middleman.yml
@@ -36,16 +36,15 @@ jobs:
       - name: Deploy benchmark-driver.github.io
         run: |
           set -x
-          result_revision="$(git -C build rev-parse HEAD)"
-          cd ../benchmark-driver.github.io
+          cd ./build
           git add .
           if ! git diff-index --quiet HEAD --; then
-            git config --global user.email "sky2-result@benchmark-driver.github.io"
-            git config --global user.name "sky2-result"
+            git config --global user.email "sky2-viewer@benchmark-driver.github.io"
+            git config --global user.name "sky2-viewer"
             git commit -m "Automatic deployment by GitHub Actions
 
-          Viewer: https://github.com/benchmark-driver/sky2-viewer/commit/$(git rev-parse HEAD)
-          Result: https://github.com/benchmark-driver/sky2-result/commit/$(git -C build rev-parse HEAD)"
+          Viewer: https://github.com/benchmark-driver/sky2-viewer/commit/$(git -C .. rev-parse HEAD)
+          Result: https://github.com/benchmark-driver/sky2-result/commit/$(git rev-parse HEAD)"
             git push origin master
           fi
         # if: github.ref == 'refs/heads/master'
